@startuml


class Client {
    -label: string
}

class Story {
    -label: string
}

class User {
    -email: string
    -password: string
}

class Tag {
    -label: string
}

class Meeting {
    -type: enum
}

class Comment {
    -html: text
    -created_at: timestamp
    -updated_at: timestamp
}


User *-- Client
User *-- Story
Story *-- Comment
Comment "0" .. "1" Meeting
User *-- Meeting
Story *-- Tag






















'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection

'List <|-- AbstractList
'Collection <|-- AbstractCollection

'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList

'class ArrayList {
'Object[] elementData
'size()
'}

'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

@enduml